--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,8 +40,8 @@ anyhow = "1"
 antidote = "1.0.0"
 http = "1"
 http-body-util = "0.1.2"
-hyper = { git = "https://github.com/scraptors/hyper", rev = "d512c79b9209b4e82abd75b35e88c3e88863be75" }
-hyper-util = { git = "https://github.com/scraptors/hyper-util", rev = "dd3bdd2f99f876d0122e464bb20346bd94acb32a" }
+hyper = "1"
+hyper-util = "0.1.6"
 linked_hash_set = "0.1"
 openssl-macros = "0.1.1"
 tower = "0.4"
