--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -220,6 +220,12 @@ jobs:
         if: startsWith(matrix.os, 'windows')
         run: choco install nasm
         shell: cmd
+        # https://github.com/rust-lang/cmake-rs/pull/259 breaks handling of long Windows paths
+        # https://github.com/cloudflare/boring/issues/414
+        # https://github.com/0x676e67/boring/commit/efacedb5bf409d0d773e8ce4f5080cb4b4c10f54
+      - name: Pin some dependencies, temporary patch for cmake breakage
+        run: |
+          cargo update --package cmake --precise 0.1.54
       - name: Install LLVM and Clang
         if: startsWith(matrix.os, 'windows')
         uses: KyleMayes/install-llvm-action@v1
