--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -252,7 +252,7 @@ jobs:
         if: endsWith(matrix.target, '-pc-windows-msvc')
         uses: ilammy/msvc-dev-cmd@v1
         with:
-          arch: ${{ contains(matrix.target, 'x86_64') && 'x64' || 'x86' }}
+          arch: ${{ contains(matrix.target, 'x86_64') && 'x64' || contains(matrix.target, 'aarch64') && 'arm64' || 'x86' }}
       - name: Set LIBCLANG_PATH
         if: startsWith(matrix.os, 'windows')
         run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
