--- a/boring/Cargo.toml
+++ b/boring/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 keywords = ["crypto", "tls", "ssl", "dtls"]
 categories = ["cryptography", "api-bindings"]
 edition = { workspace = true }
-rust-version = "1.80"
+rust-version = { workspace = true }
 
 [package.metadata.docs.rs]
 features = ["rpk", "underscore-wildcards"]
